assets/css/style.css
body{
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	background-color: #eeeeee;
}

h1{
	background: #4aaaa5;
	padding: 20px 15px;
	display: inline-block;
	font-size: 30px;
	color: #FFF;
	position: absolute;
	left: 5%;
}

a{
	text-decoration: none;
}

h1, h2, h3, h4, h5, h6, .imgtxt{
	font-family: 'Georgia', Times, Times New Roman, serif;
}

h2, h3, h4, h5, h6{
	color: #4aaaa5;
}

h2{
	font-size: 25px;
	margin-bottom: 20px;
}

h3{
	font-size: 20px;
	margin-bottom: 25px;
}

nav{
	width: auto;
	position: absolute;
	right: 5%;
}

#toprow{
	background: #fff;
	position: fixed;
	height: 70px;
	top: 0;
	left: 0;
	width: 100%;
	height: 70px;
	border-style: solid;
	border-color: #cccccc;
	border-width: 0 0 3px 0;
}

hr.hidden{
	visibility: hidden;
}

#aboutme, #contact{
	width: 65%;
}

#headshot{
	float: left;
	width: 30%;
	height: auto;
	margin-right: 20px;
	margin-bottom: 5px;
}

#connect{
	position: absolute;
	display: inline-block;
	right: 0;
	top: 0;
	margin: 40px, 0, 40px, auto;
	width: 20%;
	padding: 40px, 0, 40px, auto;
	display: inline-block;
	text-align: center;
	
}

.content{
	position:relative;
	top: 70px;
	margin-left: 5%;
	margin-right: 5%;
	margin-top: 40px;
	margin-bottom: 40px;
	width: 90%;
	padding-bottom: 40px;
	z-index: -1;
}

p{
	text-align: left;
	line-height: 30px;
	margin-bottom: 30px;
}

#portfolio{
	max-width: 690px
}

#portfolio div{
	display: inline-block;
	position: relative;
	width: 320px;
	height: 240px;
}

#portfolio img{
	width: 320px;
	height: auto;
}

#portfolio a{
	margin-right: 10px;
	margin-top: 10px;
}

#portfolio .imgtxt{
	position: absolute;
	left: 0;
	top: 70%;
	background-color: teal;
	color: white;
	text-align: center;
	font-size: 20px;
	height: 20px;
	padding: 20px 0;
}

.c_pad{
	padding: 20px 20px 20px 20px;
	background-color: #ffffff;
	border-style: solid;
	border-color: #dddddd;
	border-width: 3px;
}

footer{
	position: fixed;
	bottom: 0;
	left: 0;
	clear:both;
	background-color: #999999;
	text-align: center;
	font-size: 10px;
	padding-top: 20px;
	padding-bottom: 20px;
	border-width: 3px 0 0 0;
	border-style: solid;
	border-color: #4aaaa5;
	width: 100%;
}

nav > a{
	display: inline-block;
	padding: 24px 0;
	width: 100px;
	border-color: #069;
	border-width: 2px;
	font-size: 20px;
	display: inline-block;
	text-align: center;
	text-decoration: none;
	font-size: 20px;
	color: #999999;
}

nav > a:hover{
	background-color: #4aaaa5;
	color: #fff;
}

input{
	margin-bottom: 10px;
}

aside img{
	height: 32px;
	width: auto;
}

aside a{
	margin-right: 5px;
}

aside{
	padding: 40px 3%;
}

input{
	width: 300px;
}

#message{
	width: 90%;
	height: 300px;
}

